2013-05-03  Andrey Grozin <A.G.Grozin@inp.nsk.su>

	* configure.ac: For consistency skip cmucl and 
	Clozure CL init files.

2013-05-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intden.spad.pamphlet: Clean up, export
	'decompose' and 'solve_u'.

2013-05-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/galpolyu.spad.pamphlet,
	src/algebra/polycat.spad.pamphlet: Move unvectorise.

2013-05-03  Krystian Baclawski  <krystian.baclawski@gmail.com>

	* debian: Debian friendly way of creating deb packages.

2013-05-03  Krystian Baclawski  <krystian.baclawski@gmail.com>

	* Makefile.in: Don't fail in noweb has been already unpacked.
	* src/algebra/Makefile.in: Make the step resumable, if interpsys
	  fails.

2013-05-03  Krystian Baclawski  <krystian.baclawski@gmail.com>

	* src/scripts/build_helper: Make compilation set proper exit code on
	  failures, add debug parameter.
	* configure, configure.ac: Add configure flag to enable debug build.
	* src/boot/Makefile.in, src/interp/Makefile.in: Propagate debug
	  settings from configure.

2013-05-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/liouv.spad.pamphlet,
	src/algebra/special2.spad.pamphlet,
	src/algebra/fs2ups.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet,
	src/algebra/expr.spad.pamphlet: Implement erfi.

2013-05-01  Krystian Baclawski <krystian.baclawski@gmail.com>

	* contrib/macos: Build application bundle for MacOSX.
	* Makefile.in: Make FriCAS installation relocatable with 
	  FRICAS_PREFIX environment variable.

2013-04-29  Krystian Baclawski <krystian.baclawski@gmail.com>

	* src/lib/edin.c, src/lib/fnct_key.c, src/lib/util.c,
	src/lib/wct.c: Remove rusty workaround for ancient MacOSX'es.

2013-04-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intden.spad.pamphlet: Fix integration with
	'li'.

2013-04-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rdeef.spad.pamphlet: Fix wrong normalization
	in RDE.
