@@ -1,3 +1,10 @@
+2013-05-03  Krystian Baclawski <krystian.baclawski@gmail.com>
+
+	* configure, configure.ac: fixed fricas_debug_compiler variable
+	propagation to Makefiles.
+	* src/lisp/fricas-lisp.lisp: Prevent SBCL from crashing on entry to
+	debugger.
+
 2013-05-03  Andrey Grozin <A.G.Grozin@inp.nsk.su>
 
 	* configure.ac: For consistency skip cmucl and 
